# DeepLearning

./: README.md
Classification/GhostNet/: ghostnet.py
Classification/MNIST/: config.py  dataset.py  model.py  train.py  图像分类1.pptx
Classification/Pytorch_Load_pt/: class_custom.txt  config.py  model.py  model_finetune.py  predict.py  pth2onnx.py  pth2pt.py  train.py  说明.docx
Classification/Transfer_Learning/: config.py  dataset_v2.py  demo.py  model.py  model_finetune.py  predict.py  pth2onnx.py  train.py  说明.docx
Classification/flower_photos/: config.py  dataset.py  dataset_v2.py  model.py  predict.py  train.py
Classification/flowers_photo/: config.py  dataset_v2.py  predict.py  pth2onnx.py  train.py
Classification/pth2onnx/: model.py  pth2onnx.py  test.py
CrowdCounting/: day10.pptx
CrowdCounting/DCCUS/: evaluator.py  main.py
CrowdCounting/DM-Count/: models.py  train.py  train_helper.py
CrowdCounting/dmap_gen/: dmap_for_NWPU.py  dmap_for_QNRF.py  dmap_for_SHHA.py  dmap_for_SHHB.py  dmap_for_jhu_crowd++.py
LLM/gpt/: README.md  demo.py  main.py
LLM/gpt/models/: gpt.py  (+5 more)
LLM/makemore/: makemore.py
ObjectDetection/: Repconv.py  coco2yolo.py  distrubution_train.py  flops.py  gpu_usage.py  select_devices.py
ObjectDetection/ASFF/: demo.py  eval.py  main.py
ObjectDetection/ASSD/: assd_resnet101.py  config.py  dataset_pascal.py  dec_eval.py  dec_loss.py  dec_module.py  main.py  predict.py  priorbox.py  transforms.py
ObjectDetection/Anchor-base&anchor-free/: KeepTryingGo.potx  anchor-base&anchor-free.md
ObjectDetection/Augmentations/: Myautoaugment_utils.py  SmallObjectAugmentation.py
ObjectDetection/BOF/: detect.py  test.py  train.py
ObjectDetection/DETR/: DETR_minimal_predict.py  engine.py  main.py
ObjectDetection/DSOD/: demo.py  predict.py  test.py  train.py
ObjectDetection/DSSD/: predict.py  train_voc.py  voc_eval.py
ObjectDetection/Data_Augmentation_for_Object_Detection/: config.py  eval_model.py  predict.py  prepare_data.py  train.py
modelDeployment/App_Classification_CPP_NCNN/app/src/main/cpp/: CMakeLists.txt  classification.cpp  objectDetect.cpp
modelDeployment/translate_seq2seq/app/src/main/cpp/: CMakeLists.txt  translate.cpp
pytorch_lightning/: mnist.py
(+1227 files in other folders)
